--- a/Storm Viewer/Base.lproj/Main.storyboard
+++ b/Storm Viewer/Base.lproj/Main.storyboard
@@ -11,22 +11,22 @@
         <!--View Controller-->
         <scene sceneID="88A-4b-sKF">
             <objects>
-                <tableViewController id="yhm-dL-soh" customClass="ViewController" customModule="Project1__Hacking_With_SWIFT_" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="yhm-dL-soh" customClass="ViewController" customModule="Storm_Viewer_project_1_" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="wd5-Ap-ObL">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Picture" textLabel="btv-kJ-RCW" style="IBUITableViewCellStyleDefault" id="H2j-RO-StY">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Picture" textLabel="btv-kJ-RCW" style="IBUITableViewCellStyleDefault" id="H2j-RO-StY">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H2j-RO-StY" id="E1G-5d-4Aa">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="btv-kJ-RCW">
-                                            <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
+                                            <rect key="frame" x="20" y="0.0" width="334.66666666666669" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
@@ -50,18 +50,19 @@
         <!--Detail View Controller-->
         <scene sceneID="DMf-Yy-mX4">
             <objects>
-                <viewController storyboardIdentifier="Detail" id="6en-iM-NJ1" customClass="DetailViewController" customModule="Project1__Hacking_With_SWIFT_" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Detail" id="6en-iM-NJ1" customClass="DetailViewController" customModule="Storm_Viewer_project_1_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LqH-5T-hOD">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cMV-0b-0nH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cMV-0b-0nH">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ga2-xV-zub"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="cMV-0b-0nH" secondAttribute="bottom" id="9UD-DG-yye"/>
                             <constraint firstItem="cMV-0b-0nH" firstAttribute="top" secondItem="LqH-5T-hOD" secondAttribute="topMargin" constant="-59" id="QpZ-Vw-SB7"/>
                             <constraint firstItem="cMV-0b-0nH" firstAttribute="centerY" secondItem="LqH-5T-hOD" secondAttribute="centerY" id="WT0-Qd-Bi1"/>
                             <constraint firstItem="cMV-0b-0nH" firstAttribute="leading" secondItem="ga2-xV-zub" secondAttribute="leading" id="e8j-4a-Cai"/>
@@ -84,6 +85,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3Mw-mJ-eNi">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
